renaming project structure, fixing accordion

--- a/Angular_CapEat/src/app/LandingPage/lp.component.html
+++ b/Angular_CapEat/src/app/LandingPage/lp.component.html
@@ -39,6 +39,7 @@
       <div class="container" id="capEatContainer">
           <button type="button" class="btn btn-primary" id="orderHistoryButton">View Order History</button>
           <button type="button" class="btn btn-primary" id="viewMaps">Maps For Buildings</button>
+          <button type="button" class="btn btn-primary" id="viewMaps">View Shopping Cart</button>
         </div><!--/.navbar-collapse -->
       </div>
     </nav>
@@ -66,71 +67,72 @@
             </div>
             <div id="collapse1" class="panel-collapse collapse in">
               <div class="panel-body">
-                  <li><img src="/Images/Apple.png" class="img_class"><a href="url">Be Well</a></li>
-                  <li><img src="/Images/Rice.png" class="img_class"><a href="url">Indian</a></li>
-                  <li><img src="/Images/Sandwich.png" class="img_class"><a href="url">Sandwich</a></li>
-                  <li><img src="/Images/BBQ.png" class="img_class"><a href="url">Memphis BBQ</a></li>
-                  <li><img src="/Images/Soup.png" class="img_class"><a href="url">Soup</a></li>
-                  <li><img src="/Images/Salad.png" class="img_class"><a href="url">Salad</a></li>
-                  <li><img src="/Images/Action.png" class="img_class"><a href="url">Action</a></li></div>
+                  <li><img src="/LandingPage/AngularEaters/Images/Images/Apple.png" class="img_class"><a href="url">Be Well</a></li>
+                  <li><img src="/LandingPage/AngularEaters/Images/Images/Rice.png" class="img_class"><a href="url">Indian</a></li>
+                  <li><img src="/LandingPage/AngularEaters/Images/Images/Sandwich.png" class="img_class"><a href="url">Sandwich</a></li>
+                  <li><img src="/LandingPage/AngularEaters/Images/Images/BBQ.png" class="img_class"><a href="url">Memphis BBQ</a></li>
+                  <li><img src="/LandingPage/AngularEaters/Images/Images/Soup.png" class="img_class"><a href="url">Soup</a></li>
+                  <li><img src="/LandingPage/AngularEaters/ImagesImages/Salad.png" class="img_class"><a href="url">Salad</a></li>
+                  <li><img src="/LandingPage/AngularEaters/Images/Images/Action.png" class="img_class"><a href="url">Action</a></li></div>
               </div>
             </div>
           </div>
           <div class="panel panel-default">
               <div class="panel-heading">
                 <h4 class="panel-title">
-                  <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
+                  <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
                   West Creek Building 2</a>
                 </h4>
               </div>
               <div id="collapse2" class="panel-collapse collapse">
                 <div class="panel-body">
-                    <li><img src="/Images/Apple.png" class="img_class"><a href="url">Be Well</a></li>
-                    <li><img src="/Images/International.png" class="img_class"><a href="url">International</a></li>
-                    <li><img src="/Images/Pizza.png" class="img_class"><a href="url">Fired Up!</a></li>
-                    <li><img src="/Images/Sandwich.png" class="img_class"><a href="url">Sandwich</a></li>
-                    <li><img src="/Images/Soup.png" class="img_class"><a href="url">Soup</a></li>
-                    <li><img src="/Images/Salad.png" class="img_class"><a href="url">Salad</a></li>
-                    <li><img src="/Images/Taco.png" class="img_class"><a href="url">Mexican</a></li>
-                    <li><img src="/Images/Burger.png" class="img_class"><a href="url">BYOB</a></li>
+                    <li><img src="/LandingPage/AngularEaters/Images/Apple.png" class="img_class"><a href="url">Be Well</a></li>
+                    <li><img src="/LandingPage/AngularEaters/Images/International.png" class="img_class"><a href="url">International</a></li>
+                    <li><img src="/LandingPage/AngularEaters/Images/Pizza.png" class="img_class"><a href="url">Fired Up!</a></li>
+                    <li><img src="/LandingPage/AngularEaters/Images/Sandwich.png" class="img_class"><a href="url">Sandwich</a></li>
+                    <li><img src="/LandingPage/AngularEaters/Images/Soup.png" class="img_class"><a href="url">Soup</a></li>
+                    <li><img src="/LandingPage/AngularEaters/Images/Images/Salad.png" class="img_class"><a href="url">Salad</a></li>
+                    <li><img src="/LandingPage/AngularEaters/Images/Images/Taco.png" class="img_class"><a href="url">Mexican</a></li>
+                    <li><img src="/LandingPage/AngularEaters/Images/Images/Burger.png" class="img_class"><a href="url">BYOB</a></li>
                 </div>
               </div>
             </div>
           <div class="panel panel-default">
             <div class="panel-heading">
               <h4 class="panel-title">
-                <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
+                <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
                 West Creek Building 4</a>
               </h4>
             </div>
             <div id="collapse3" class="panel-collapse collapse">
               <div class="panel-body">
-                  <li><img src="/Images/Apple.png" class="img_class"><a href="url">Be Well</a></li>
-                  <li><img src="/Images/Rice.png" class="img_class"><a href="url">Indian</a></li>
-                  <li><img src="/Images/Sandwich.png" class="img_class"><a href="url">Sandwich</a></li>
-                  <li><img src="/Images/BBQ.png" class="img_class"><a href="url">Memphis BBQ</a></li>
-                  <li><img src="/Images/Soup.png" class="img_class"><a href="url">Soup</a></li>
-                  <li><img src="/Images/Salad.png" class="img_class"><a href="url">Salad</a></li>
-                  <li><img src="/Images/Action.png" class="img_class"><a href="url">Action</a></li></div>
+                  <li><img src="/LandingPage/AngularEaters/Apple.png" class="img_class"><a href="url">Be Well</a></li>
+                  <li><img src="/LandingPage/AngularEaters/Rice.png" class="img_class"><a href="url">Indian</a></li>
+                  <li><img src="/LandingPage/AngularEaters/Sandwich.png" class="img_class"><a href="url">Sandwich</a></li>
+                  <li><img src="/LandingPage/AngularEaters/Images/BBQ.png" class="img_class"><a href="url">Memphis BBQ</a></li>
+                  <li><img src="/LandingPage/AngularEaters/Images/Soup.png" class="img_class"><a href="url">Soup</a></li>
+                  <li><img src="/LandingPage/AngularEaters/Images/Salad.png" class="img_class"><a href="url">Salad</a></li>
+                  <li><img src="/LandingPage/AngularEaters/Images/Action.png" class="img_class"><a href="url">Action</a></li>
               </div>
             </div>
           </div>
           <div class="panel panel-default">
             <div class="panel-heading">
               <h4 class="panel-title">
-                <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
+                <a data-toggle="collapse" data-parent="#accordion" href="#collapse4">
                 West Creek Building 6</a>
               </h4>
             </div>
             <div id="collapse4" class="panel-collapse collapse">
               <div class="panel-body">
-                  <li><img src="/Images/Apple.png" class="img_class"><a href="url">Be Well</a></li>
-                  <li><img src="/Images/Rice.png" class="img_class"><a href="url">Indian</a></li>
-                  <li><img src="/Images/Sandwich.png" class="img_class"><a href="url">Sandwich</a></li>
-                  <li><img src="/Images/BBQ.png" class="img_class"><a href="url">Memphis BBQ</a></li>
-                  <li><img src="/Images/Soup.png" class="img_class"><a href="url">Soup</a></li>
-                  <li><img src="/Images/Salad.png" class="img_class"><a href="url">Salad</a></li>
-                  <li><img src="/Images/Action.png" class="img_class"><a href="url">Action</a></li></div>
+                  <li><img src="/LandingPage/AngularEaters/Images/Apple.png" class="img_class"><a href="url">Be Well</a></li>
+                  <li><img src="/LandingPage/AngularEaters/Images/Rice.png" class="img_class"><a href="url">Indian</a></li>
+                  <li><img src="/LandingPage/AngularEaters/Images/Sandwich.png" class="img_class"><a href="url">Sandwich</a></li>
+                  <li><img src="/LandingPage/AngularEaters/Images/BBQ.png" class="img_class"><a href="url">Memphis BBQ</a></li>
+                  <li><img src="/LandingPage/AngularEaters/Images/Soup.png" class="img_class"><a href="url">Soup</a></li>
+                  <li><img src="/LandingPage/AngularEaters/Images/Salad.png" class="img_class"><a href="url">Salad</a></li>
+                  <li><img src="/LandingPage/AngularEaters/Images/Action.png" class="img_class"><a href="url">Action</a></li>
+                </div>
               </div>
             </div>
             
