--- a/Angular_CapEat/src/app/LandingPage/lp.component.css
+++ b/Angular_CapEat/src/app/LandingPage/lp.component.css
@@ -5,10 +5,10 @@ body {
     background-color: #D3D3D3;
   }
   
-  .jumbotron {
-      background-image: url("/Images/Food.jpg");
+  .jumbotron { 
+      background-image: url("AngularEaters/Images/Food.jpg");
       background-color: #D3D3D3;
-      margin-bottom: 0;`enter code here`
+      margin-bottom: 0;
       min-height: 50%;
       height: 300px;
       background-repeat: no-repeat;
@@ -74,7 +74,7 @@ body {
       align: right;
       
   }
-  
+
   
   
   
