fix image icons

--- a/CapEat/src/app/Home/home.component.html
+++ b/CapEat/src/app/Home/home.component.html
@@ -120,45 +120,63 @@
 					<ul>
 
 						<li>
-							<a>Be Well</a>
+							<img src="././assets/images/Apple.png" class="img_class" />
+							<a href="url">Be Well</a>
 						</li>
 
 						<li>
-							<a>Indian</a>
+							<img src="././assets/images/rice.png" class="img_class" />
+							<a href="url">Indian</a>
 						</li>
 						<li>
-							<a>Mexican</a>
+							<img src="././assets/images/Sandwich.png" class="img_class" />
+							<a href="url">Sandwich</a>
+						</li>
+						<li>
+							<img src="././assets/images/Action.png" class="img_class" />
+							<a href="url">Action</a>
 						</li>
 
 						<li>
-							<a>Soup</a>
+							<img src="././assets/images/Soup.png" class="img_class" />
+							<a href="url">Soup</a>
 						</li>
 						<li>
-							<a>Salad Bar</a>
+							<img src="././assets/images/Salad.png" class="img_class" />
+							<a href="url">Salad</a>
 						</li>
 					</ul>
 				</ng-template>
 			</ngb-panel>
-			<ngb-panel title="WC8 Menus">
+			<ngb-panel title="WC2 Menus">
 				<ng-template ngbPanelContent>
 					<ul>
 
 						<li>
-							<a>Be Well</a>
+							<img src="././assets/images/Apple.png" class="img_class" />
+							<a href="url">Be Well</a>
 						</li>
 
 						<li>
-							<a>Indian</a>
+							<img src="././assets/images/Burger.png" class="img_class" />
+							<a href="url">Build Your Own Burger</a>
 						</li>
 						<li>
-							<a>Mexican</a>
+							<img src="././assets/images/Sandwich.png" class="img_class" />
+							<a href="url">Sandwich</a>
+						</li>
+						<li>
+							<img src="././assets/images/Taco.png" class="img_class" />
+							<a href="url">Mexican</a>
 						</li>
 
 						<li>
-							<a>Soup</a>
+							<img src="././assets/images/Soup.png" class="img_class" />
+							<a href="url">Soup</a>
 						</li>
 						<li>
-							<a>Salad Bar</a>
+							<img src="././assets/images/Salad.png" class="img_class" />
+							<a href="url">Salad</a>
 						</li>
 					</ul>
 				</ng-template>
@@ -168,22 +186,26 @@
 					<ul>
 
 						<li>
-							<img src="././assets/images/BBQ.png" class="img_class" />
+							<img src="././assets/images/Apple.png" class="img_class" />
 							<a href="url">Be Well</a>
 						</li>
 
 						<li>
-							<a>Indian</a>
+							<img src="././assets/images/rice.png" class="img_class" />
+							<a href="url">Indian</a>
 						</li>
 						<li>
-							<a>Mexican</a>
+							<img src="././assets/images/Pizza.png" class="img_class" />
+							<a href="url">Pizza</a>
 						</li>
 
 						<li>
-							<a>Soup</a>
+							<img src="././assets/images/Soup.png" class="img_class" />
+							<a href="url">Soup</a>
 						</li>
 						<li>
-							<a>Salad Bar</a>
+							<img src="././assets/images/Salad.png" class="img_class" />
+							<a href="url">Salad</a>
 						</li>
 					</ul>
 				</ng-template>
