changing fb, twitter links in nav

--- a/CapEat/src/app/Home/home.component.html
+++ b/CapEat/src/app/Home/home.component.html
@@ -112,7 +112,7 @@
 	<div class="container">
 		<h2>Expand to order</h2>
 
-		<ngb-accordion [closeOthers]="true" activeIds="static-1">
+		<ngb-accordion [closeOthers]="true" activeIds="static-1" is-open="false">
 			<ngb-panel id="static-1">
 				<ng-template ngbPanelTitle>
 					<span>
