Indian menu page added with all router links

--- a/CapEat/src/app/Home/home.component.html
+++ b/CapEat/src/app/Home/home.component.html
@@ -129,7 +129,7 @@
 
 						<li>
 							<img src="././assets/images/rice.png" class="img_class" />
-							<a href="url">Indian</a>
+							<a [routerLink]="['/menu']"> Indian </a>
 						</li>
 						<li>
 							<img src="././assets/images/Sandwich.png" class="img_class" />
@@ -205,7 +205,7 @@
 
 						<li>
 							<img src="././assets/images/rice.png" class="img_class" />
-							<a href="url">Indian</a>
+							<a [routerLink]="['/menu']"> Indian </a>
 						</li>
 						<li>
 							<img src="././assets/images/Pizza.png" class="img_class" />
@@ -240,7 +240,7 @@
 	
 							<li>
 								<img src="././assets/images/rice.png" class="img_class" />
-								<a href="url">Indian</a>
+								<a [routerLink]="['/menu']"> Indian </a>
 							</li>
 							<li>
 								<img src="././assets/images/Sandwich.png" class="img_class" />
