--- a/CapEat/src/app/Addcart/addcart.component.html
+++ b/CapEat/src/app/Addcart/addcart.component.html
@@ -17,19 +17,23 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
+                            <tr *ngFor="let product of menuService.cartItems">
                                 <td data-th="Product">
                                     <div class="row">
-                                        <div class="col-sm-2 hidden-xs"><img src="http://placehold.it/100x100" alt="..." class="img-responsive"/></div>
+                                        <div class="col-sm-2 hidden-xs"><img
+                                [src]='product.imageUrl'
+                                [title]='product.productName'
+                                [style.width.px]='80'
+                                [style.height.px]='80'></div>
                                         <div class="col-sm-10">
-                                            <h4 class="nomargin">Product 1</h4>
-                                            <p>Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet.</p>
+                                            <h4 class="nomargin">{{product.productName}}</h4>
+                                            <p>{{product.description}}
                                         </div>
                                     </div>
                                 </td>
-                                <td data-th="Price">$1.99</td>
+                                <td data-th="Price">{{product.price}}</td>
                                 <td data-th="Quantity">
-                                    <input type="number" class="form-control text-center" value="1">
+                                    <input type="number" class="form-control text-center" [(ngModel)]="product.orderCount">
                                 </td>
                                 <td data-th="Subtotal" class="text-center">1.99</td>
                                 <td class="actions" data-th="">
@@ -43,7 +47,7 @@
                                 <td class="text-center"><strong>Total 1.99</strong></td>
                             </tr>
                             <tr>
-                                <td><a href="#" class="btn btn-warning"><i class="fa fa-angle-left"></i> Continue Shopping</a></td>
+                                <td><a [routerLink]="['/menu']" class="btn btn-warning"><i class="fa fa-angle-left"></i> Continue Shopping</a></td>
                                 <td colspan="2" class="hidden-xs"></td>
                                 <td class="hidden-xs text-center"><strong>Total $1.99</strong></td>
                                 <td><a href="#" class="btn btn-success btn-block">Checkout <i class="fa fa-angle-right"></i></a></td>
