update the app component

--- a/CapEat/src/app/nav/nav.component.html
+++ b/CapEat/src/app/nav/nav.component.html
@@ -7,19 +7,19 @@
   <div class="collapse navbar-collapse" id="navbarsExample04">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link, color"  href="">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link, color button-color"  href="">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link, color"  href="#">Spicy level <span class="sr-only">(current)</span></a>
+        <a class="nav-link, color button-color"  href="#">Spicy level <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link, color"   href="#">Map <span class="sr-only">(current)</span></a>
+        <a class="nav-link, color button-color"   href="#">Map <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link, color"   href="#">Histrory <span class="sr-only">(current)</span></a>
+        <a class="nav-link, color button-color"   href="#">Histrory <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link, color"   href="#">About Capeat <span class="sr-only">(current)</span></a>
+        <a class="nav-link, color button-color"   href="#">About Capeat <span class="sr-only">(current)</span></a>
       </li>
       <!-- <li ngbDropdown  class="d-inline-block">
         <a class="nav-lin" class="nav-link" class="btn btn-primary"  id="dropdownBasic1" ngbDropdownToggle>Toggle dropdown</a>
@@ -29,17 +29,6 @@
           <button class="dropdown-item">Something else is here</button>
         </div>
       </li> -->
-      <footer>
-          <meta name="viewport" content="width=device-width, initial-scale=1">
-          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    
-          <a href="https://www.facebook.com/capitalone" class="fa fa-facebook" target="_blank" rel="noopener noreferrer" title="Link opens in a new window"></a>
-          <a href="https://twitter.com/capitalone" class="fa fa-twitter" target="_blank" rel="noopener noreferrer" title="Link opens in a new window"></a>
-          <a href="https://www.linkedin.com/company/capital-one" class="fa fa-linkedin" target="_blank" rel="noopener noreferrer" title="Link opens in a new window"></a>
-          <a href="https://www.youtube.com/user/CapitalOne" class="fa fa-youtube" target="_blank" rel="noopener noreferrer" title="Link opens in a new window"></a>
-          <a href="https://www.instagram.com/capitalone/" class="fa fa-instagram" target="_blank" rel="noopener noreferrer" title="Link opens in a new window"></a>
-          <b>© Team AngularEaters</b>
-        </footer>
     
     </ul>
   </div>
