--- a/CapEat/src/app/nav/nav.component.css
+++ b/CapEat/src/app/nav/nav.component.css
@@ -12,40 +12,12 @@
     font-size: 16px;
 }
 
-.fa {
-    padding: 18px;
-    font-size: 16px;
-    width: 50px;
-    text-align: center;
-    margin: 8px 2px;
-  }
-  .fa-facebook {
-    background: #3B5998;
-    color: white;
-  }
-  
-
-  .fa-twitter {
-    background: #55ACEE;
-    color: white;
-  }
-  
-  .fa-google {
-    background: #dd4b39;
-    color: white;
-  }
-  
-  .fa-linkedin {
-    background: #007bb5;
-    color: white;
-  }
-  
-  .fa-youtube {
-    background: #bb0000;
-    color: white;
-  }
-  
-  .fa-instagram {
-    background: #125688;
-    color: white;
-  }
+.button-color{
+    /* background: #55ACEE; */
+    background: floralwhite;
+    background: #E56717
+    /* background: #EDDA74 */
+    /* background: #bb0000; */
+    /* background: #125688;
+    background: #3B5998; */
+}
