--- a/CapEat/src/app/Home/home.component.css
+++ b/CapEat/src/app/Home/home.component.css
@@ -6,9 +6,15 @@
     padding-bottom: 20px;
     background-color: #D3D3D3;
   }
+
+  .img {
+    height: 400px;
+    max-width: 100%;
+    object-fit: contain;
+  }
   
   .jumbotron { 
-      /* background-image: url("././Images/Food.jpg"); */ */
+      /* background-image: url("././Images/Food.jpg"); */ 
       background-color: #D3D3D3;
       margin-bottom: 0;
       min-height: 50%;
