bewell menu added

--- a/CapEat/src/app/Addcart/addcart.component.html
+++ b/CapEat/src/app/Addcart/addcart.component.html
@@ -17,7 +17,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr *ngFor="let product of menuService.cartItems">
+                            <tr *ngFor="let product of service.cartItems">
                                 <td data-th="Product">
                                     <div class="row">
                                         <div class="col-sm-2 hidden-xs"><img
@@ -47,7 +47,7 @@
                                 <td class="text-center"><strong>Total 1.99</strong></td>
                             </tr>
                             <tr>
-                                <td><a [routerLink]="['/menu']" class="btn btn-warning"><i class="fa fa-angle-left"></i> Continue Shopping</a></td>
+                                <td><a [routerLink]="[continueShopping]" class="btn btn-warning"><i class="fa fa-angle-left"></i> Continue Shopping</a></td>
                                 <td colspan="2" class="hidden-xs"></td>
                                 <td class="hidden-xs text-center"><strong>Total $1.99</strong></td>
                                 <td><a href="#" class="btn btn-success btn-block">Checkout <i class="fa fa-angle-right"></i></a></td>
