--- a/CapEat/src/app/Home/home.component.html
+++ b/CapEat/src/app/Home/home.component.html
@@ -120,7 +120,7 @@
 
 						<li>
 							<img src="././assets/images/Apple.png" class="img_class" />
-							<a href="url">Be Well</a>
+							<a [routerLink]="['/bewell']">Be Well</a>
 						</li>
 
 						<li>
@@ -158,7 +158,7 @@
 
 						<li>
 							<img src="././assets/images/Apple.png" class="img_class" />
-							<a href="url">Be Well</a>
+							<a [routerLink]="['/bewell']">Be Well</a>
 						</li>
 
 						<li>
@@ -196,7 +196,7 @@
 
 						<li>
 							<img src="././assets/images/Apple.png" class="img_class" />
-							<a href="url">Be Well</a>
+							<a [routerLink]="['/bewell']">Be Well</a>
 						</li>
 
 						<li>
@@ -231,7 +231,7 @@
 						<ul>
 				<li>
 								<img src="././assets/images/Apple.png" class="img_class" />
-								<a href="url">Be Well</a>
+								<a [routerLink]="['/bewell']">Be Well</a>
 							</li>
 	
 							<li>
