--- a/CapEat/src/app/nav/nav.component.html
+++ b/CapEat/src/app/nav/nav.component.html
@@ -13,7 +13,7 @@
         <a class="nav-link, color button-color"  href="#">Spicy level <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link, color button-color"   href="#">Map <span class="sr-only">(current)</span></a>
+        <a class="nav-link, color button-color"   href="/maps">Map <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
         <a class="nav-link, color button-color"   href="#">Histrory <span class="sr-only">(current)</span></a>
