--- a/CapEat/src/app/app.component.html
+++ b/CapEat/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-nav></app-nav>
 <app-dialog [(visible)]="showDialog">
-        <form #form="ngForm" (ngSubmit)="submitForm(form.value)">
+        <form #form="ngForm">
                 <div class="form-group">
                     <h2> Sign in </h2>
                     <hr>
