create special, spice-level,

--- a/UI_CapEat/src/app/nav/nav.component.html
+++ b/UI_CapEat/src/app/nav/nav.component.html
@@ -7,16 +7,28 @@
   <div class="collapse navbar-collapse" id="navbarsExample04">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link, color button-color"  href="">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link, color button-color"  href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link, color button-color"  href="#">Spicy level <span class="sr-only">(current)</span></a>
+        <a class="nav-link, color button-color"  href="#/spicelevel">Spicy level <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link, color button-color"   href="/maps">Map <span class="sr-only">(current)</span></a>
+        <a class="nav-link, color button-color"   href="#/maps">Map <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link, color button-color"   href="#">Histrory <span class="sr-only">(current)</span></a>
+          <a class="nav-link, color button-color"   href="#/special">Week Special <span class="sr-only">(current)</span></a>
+        </li>
+        <li ngbDropdown class="nav-item active">
+            <a class="nav-link, color button-color"   href="#/catering">Capeat Buffet <span class="sr-only">(current)</span></a>
+            <!-- <a class="nav-lin, color button-color" class="nav-link" class="btn btn-primary"  id="dropdownBasic1" ngbDropdownToggle>Catering</a> 
+            <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+                <button  href="#/catering" class="dropdown-item">Breakfast</button>
+                <button class="dropdown-item">lunch</button>
+                <button class="dropdown-item">DINNER</button>
+              </div> -->
+          </li>
+      <li class="nav-item active">
+        <a class="nav-link, color button-color"   href="#/history">Histrory <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
         <a class="nav-link, color button-color"   href="#">About Capeat <span class="sr-only">(current)</span></a>
